[gd_scene load_steps=11 format=3 uid="uid://v1af140jq2of"]

[ext_resource type="Script" uid="uid://d0n8vcge5p4u3" path="res://src/Player/player.gd" id="1_wdw76"]
[ext_resource type="Texture2D" uid="uid://ct6kbx46t62kc" path="res://src/Player/dziadu-french.png" id="2_4pjjn"]
[ext_resource type="PackedScene" uid="uid://2bvqp5i8uw1v" path="res://src/common/HealthComponent/HealthComponent.tscn" id="2_dd31a"]
[ext_resource type="PackedScene" uid="uid://b1kcy0xwnxjbd" path="res://src/Player/InteractRay.tscn" id="2_rwoh2"]
[ext_resource type="PackedScene" uid="uid://duqdt1nl4il4q" path="res://src/HUD/HUD.tscn" id="3_vy1tf"]
[ext_resource type="PackedScene" uid="uid://bgykt56kdnbpo" path="res://src/Player/Flashlight/Flashlight.tscn" id="5_3ajlp"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dd31a"]
albedo_texture = ExtResource("2_4pjjn")
uv1_scale = Vector3(3.015, 1.93, 0)
uv1_offset = Vector3(1.5, 1.665, -0.38)
uv1_triplanar_sharpness = 10.0479

[sub_resource type="CapsuleMesh" id="CapsuleMesh_s10d5"]
material = SubResource("StandardMaterial3D_dd31a")

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_jouo0"]
points = PackedVector3Array(-0.125207, -0.532801, -0.480507, 0.0227831, 0.47607, 0.498884, 0.169713, 0.559144, 0.464172, 0.231051, -0.803591, 0.320455, 0.40741, 0.651043, -0.243523, -0.482789, 0.594843, 0.0822132, -0.362868, -0.682312, 0.289697, 0.469044, -0.654529, -0.0662713, -0.127444, 0.842701, -0.338103, -0.393435, -0.683942, -0.244717, 0.438255, 0.623309, 0.200849, 0.0841477, 0.977454, 0.114795, -0.0682023, -0.976458, -0.12927, 0.20055, -0.563129, -0.451454, -0.185527, 0.595453, -0.453475, -0.273363, 0.592268, 0.407754, -0.00693649, -0.476823, 0.49966, 0.375821, -0.588614, 0.316955, 0.111579, 0.563059, -0.481177, -0.41725, 0.527866, -0.270497, -0.484546, -0.596972, -0.0665097, -0.279747, 0.908561, 0.0533361, -0.250197, -0.880712, 0.205319, 0.263647, -0.902771, -0.127394, 0.293368, 0.871526, -0.157196, 0.373412, -0.526319, -0.328246, 0.499663, 0.476641, -0.00688856, 0.0531056, 0.875001, 0.324703, -0.154543, -0.590854, 0.465879, -0.0972799, -0.782358, -0.398188, -0.387649, -0.498171, 0.31565, -0.30068, -0.587995, -0.388901)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_vy1tf"]
radius = 0.1
height = 0.75

[sub_resource type="BoxMesh" id="BoxMesh_vy1tf"]
size = Vector3(0.1, 0.1, 0.1)

[node name="Player" type="CharacterBody3D"]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_wdw76")

[node name="HealthComponent" parent="." instance=ExtResource("2_dd31a")]

[node name="HUD" parent="." instance=ExtResource("3_vy1tf")]

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_s10d5")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("ConvexPolygonShape3D_jouo0")

[node name="TwistPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.211028, 0)

[node name="PitchPivot" type="Node3D" parent="TwistPivot"]

[node name="Camera3D" type="Camera3D" parent="TwistPivot/PitchPivot"]
current = true

[node name="InteractRay" parent="TwistPivot/PitchPivot/Camera3D" instance=ExtResource("2_rwoh2")]
collision_mask = 4

[node name="HUD" parent="TwistPivot/PitchPivot/Camera3D" instance=ExtResource("3_vy1tf")]

[node name="Flashlight" parent="TwistPivot/PitchPivot/Camera3D" instance=ExtResource("5_3ajlp")]

[node name="Arm" type="Node3D" parent="TwistPivot/PitchPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.35, -0.154471, -0.615269)

[node name="MeshInstance3D" type="MeshInstance3D" parent="TwistPivot/PitchPivot/Arm"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
mesh = SubResource("CapsuleMesh_vy1tf")
skeleton = NodePath("")

[node name="HandPoint" type="Node3D" parent="TwistPivot/PitchPivot/Arm"]
transform = Transform3D(1, 0, -6.77626e-22, 0, 1, 0, 6.77626e-22, 0, 1, 0, 0, -0.375)

[node name="MeshInstance3D2" type="MeshInstance3D" parent="TwistPivot/PitchPivot/Arm/HandPoint"]
mesh = SubResource("BoxMesh_vy1tf")
skeleton = NodePath("../../../../..")

[connection signal="health_changed" from="HealthComponent" to="." method="_on_health_changed"]
[connection signal="killed" from="HealthComponent" to="." method="_on_killed"]
